--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,53 +25,64 @@
             android:textSize="25dp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
         android:layout_below="@+id/headerLayout"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/contentLayout"
-        android:background="#dfdfde"
-        android:padding="15dp">
+        android:layout_alignLeft="@+id/headerLayout"
+        android:layout_alignStart="@+id/headerLayout"
+        android:layout_above="@+id/footerLayout"
+        android:background="#ffffff">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/username"
-            android:id="@+id/label_username"
-            android:paddingBottom="3dp" />
-
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:background="#ffffff" />
+            android:layout_height="match_parent"
+            android:layout_below="@+id/headerLayout"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/contentLayout"
+            android:background="#ffffffff"
+            android:padding="15dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/password"
-            android:id="@+id/label_password"
-            android:paddingTop="15dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/username"
+                android:id="@+id/label_username"
+                android:paddingBottom="3dp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/password"
-            android:layout_gravity="center_horizontal" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/username"
+                android:background="#ffffff" />
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center_horizontal"
-            android:visibility="invisible" />
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/password"
+                android:id="@+id/label_password"
+                android:paddingTop="15dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/password"
+                android:layout_gravity="center_horizontal" />
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar"
+                android:layout_gravity="center_horizontal"
+                android:visibility="invisible" />
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -79,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="#dfdfde"
+        android:background="#ffffff"
         android:id="@+id/footerLayout"
         android:baselineAligned="false"
         android:weightSum="1"
@@ -110,7 +121,6 @@
             android:onClick="sendListener"/>
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
