--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -9,6 +9,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/textView_username" />
 
-
+    <com.example.excilys.exercice1.ParlezVousView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView_username"
+        android:background="@android:color/white" />
 
 </LinearLayout>
